on-premises/4.12/modules/ROOT/pages/installing-an-enterprise-license.adoc
= Install an Enterprise License on On-Premises Mule Runtime Engine
:page-aliases: 4.12@mule-runtime::installing-an-enterprise-license.adoc
:keywords: muleLicenseKey.lic, installLicense, verifyLicense, license expired, tanuki, java service wrapper license, vcore, on-premises, on-prem, standalone, enterprise, ee, license, licensed

Mule Enterprise Edition is the Mule runtime engine (Mule) distribution you download as `+mule-enterprise-standalone-*.zip+`. See xref:runtime-installation-task.adoc[Download, Install, Configure, and Upgrade On-Premises Mule Runtime Engine]. An Enterprise license is a separate `license.lic` file from your MuleSoft subscription. You install that file on a Mule Enterprise Edition instance with `mule -installLicense`. Mule stores it as `muleLicenseKey.lic` in `$MULE_HOME/conf`. Production use, clustering, and premium connectors require a valid Enterprise license. Mule Kernel (`+mule-standalone-*.zip+`) doesn't accept an Enterprise license and doesn't include clustering.

This is the License stage in xref:index.adoc[On-Premises Runtimes Overview]. Stop the runtime before you install the license. After it installs, configure the Java Service Wrapper, then start the instance and deploy Mule applications.

An on-premises runtime with an expired Enterprise license doesn't restart. Install a valid Enterprise license before you start the runtime in production.

The Enterprise license isn't the Java Service Wrapper (Tanuki) license. A Tanuki license error means the wrapper key is missing or invalid, not that `mule -installLicense` failed.

MuleSoft provides a trial of Mule Enterprise Edition for evaluation. The trial license limits usage of Mule and isn't appropriate for production.

Install a non-trial Enterprise license before you use Mule Enterprise Edition in production. If you already have a subscription, you can also <<download-your-license-key,download the license key>> from the MuleSoft Support portal.

. Contact your MuleSoft account representative or https://www.mulesoft.com/contact[the MuleSoft sales team] to acquire an _Enterprise license_. Depending on your subscription, the license is provided either as:
.. A single `license.lic` file
.. A `.zip` file that contains one or more license files:
   *** For Government Cloud customers, the `.zip` file includes both a `license-fips.lic` (FIPS), and a `license.lic` (non-FIPS) license.
   *** For non-Government Cloud customers, the `.zip` file usually contains only one license file in the form of a `license.lic` file.
. Before installing, it's recommended to remove the previous license from your `$MULE_HOME` directory:
.. Navigate to `$MULE_HOME/conf/`
.. Delete the existing `muleLicenseKey.lic` file.
. If you're installing your license on multiple platforms, back up your new `license.lic` file in another location before proceeding.
. Make sure that the Mule Server is *stopped (not running)* and then open the terminal or command line on your system.
. Set the `JAVA_HOME` environment variable before running the `mule -installLicense` command.
+
.. On *Mac/Unix/Linux*, if `JAVA_HOME` isn't detected automatically, set it to avoid any issues.
.. On *Windows*, if `JAVA_HOME` isn't set, the license installation fails.
. If your license was provided as a `.zip` file, extract it and select the correct file for your environment.
. Run the license installation command:
+
.. On *Mac/Unix/Linux*, from the `$MULE_HOME/bin` directory, run `mule -installLicense ~/license.lic`.
.. On *Windows*, copy the `license.lic` file to the `\bin` folder, and then run `mule.bat -installLicense license.lic` from the command line.
. In the `$MULE_HOME/conf` directory, Mule saves a new file called `muleLicenseKey.lic`. This shows that the license has been installed.
. *Start* your Mule Server again, by the usual means.

== Verify or Remove an Enterprise License

Make sure that the Mule Server is *stopped* and then open the terminal or command line on your system.

* To verify that Mule has successfully installed your Enterprise license, run:
+
`mule -verifyLicense`
+
The command outputs:
+
[source,xml,linenums]
----
License information Evaluation = false, Expiration Date = Tue May 19 00:00:00 UTC 2025, Contact Name = John Doe, Contact Email Address = john.doe@company.com, Contact Telephone = 00000000, Contact Company = Local Global Ltd, Contact Country = US, Entitlements = clustering,api-gateway
----

* To uninstall a previously installed license, run:
+
`mule -unInstallLicense`
+
Sometimes the license installation fails and it might be necessary to manually delete `$MULE_HOME/conf/muleLicenseKey.lic`.

* To verify the license before installing it, run:
+
`mule -verifyLicenseDetails [path_to_license]`
+
The command outputs the same information as in `mule -verifyLicense`.

[[download-your-license-key]]
== Download Your License Key

. Log in to the MuleSoft Support portal at https://help.mulesoft.com using your credentials. If you don't have login information, contact your Customer Success Manager.
. Click on the *Support* tab located on the navigation menu of the Mulesoft Help Center home page.
. Click on the *Subscriptions* tab located halfway through the page.
. Click on the *Subscription Name* of the subscription you would like a license key for. Please note that you must click on the Subscription Name (second column on the right) or you won't be forwarded to the correct page.
. Click on the *License ID* number located at the end of the page on the right.
. Click on the *License Key* file located in the Notes & Attachments section at the beginning of the page on the right to download your license key.
.. Some subscriptions provide a direct `license.lic` file.
.. Others provide a `.zip` file that contains one or more license files. Extract the `.zip` file and use the correct license previously described.

If you download a FIPS license, see xref:mule-runtime::fips-140-2-compliance-support.adoc[FIPS 140-2 Compliance Support] to configure your Mule runtime to run in FIPS mode.

== Install an Enterprise License on Embedded Mule Runtime Engine

Though not recommended for production, you can install an Enterprise license on the Mule that comes bundled with Anypoint Studio. That path isn't the on-premises runtime setup in xref:index.adoc[On-Premises Runtimes Overview]. Don't download a separate on-premises runtime only to license Studio.

. Download and install Mule Enterprise Edition.
. Contact your account representative or https://www.mulesoft.com/contact[the MuleSoft sales team] to acquire an _Enterprise license_. Depending on your subscription, the license is provided either as a direct `license.lic` file or inside a `.zip` file.
. Complete the steps previously outlined to install the new license on the Mule Enterprise Edition from the first step.
. From the `$MULE_HOME/conf` directory, copy the new license file that Mule stored: `muleLicenseKey.lic`.
. Paste the `muleLicenseKey.lic` file into the classpath of your embedded application in Mule bundled with Studio.

== Install Product Licenses

To use the SAP Connector or other premium connectors, you must first acquire, then install a product license. Contact your account representative or https://www.mulesoft.com/contact[the MuleSoft sales team] to acquire a license for one of the previously mentioned products.

[TIP]
The https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/[MuleSoft Enterprise Maven customer repository] allows you to access Mule Enterprise modules, connectors, and other components not included in the trial or community versions. See xref:mule-runtime::mmp-concept.adoc[About the Mule Maven Plugin] for details.


== Troubleshoot Common Error Messages

=== `java.io.FileNotFoundException: muleLicenseKey.lic (Permission denied)`

The process that runs `mule -installLicense` cannot write `$MULE_HOME/conf/muleLicenseKey.lic`. Stop the runtime, confirm the OS user owns `$MULE_HOME`, and retry. Don't copy-paste the install command if paste inserts hidden characters; type the command.

=== `The License Key was found but failed to be validated`

This message comes from the Java Service Wrapper (Tanuki), not from the Mule Enterprise license. Fix the wrapper license. Then use `mule -verifyLicense` to confirm `muleLicenseKey.lic`.

== See Also

* xref:index.adoc[On-Premises Runtimes Overview]
* xref:runtime-installation-task.adoc[Download, Install, Configure, and Upgrade On-Premises Mule Runtime Engine]
* xref:starting-and-stopping-mule-esb.adoc[Start and Stop On-Premises Mule Runtime Engine]
* xref:choosing-the-right-clustering-topology.adoc[Cluster On-Premises Mule Runtime Instances]
* xref:mule-runtime::fips-140-2-compliance-support.adoc[FIPS 140-2 Compliance Support]
